--- a/ios/Podfile
+++ b/ios/Podfile
@@ -51,6 +51,12 @@ target 'lapp' do
   end
 
   post_install do |installer|
+    installer.pods_project.targets.each do |t|
+      t.build_configurations.each do |config|
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '17.0'
+      end
+    end
+
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
       installer,
